update Padding fix bug overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,9 @@
     justify-content: center;
     align-items: center;
     margin-top: 7.4rem;
-    overflow: scroll;
+}
+.welcome-content {
+    padding: 2rem;
 }
 .welcome-img{
     width: 200px;
@@ -152,7 +154,7 @@
     background-color: var(--gray-color);
     width: 100%;
     height: 80vh;
-    padding: 0 2rem;
+    padding: 2rem;
 }
 .profile-title {
     font-size: 6rem;
